<!--
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements.  See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership.  The ASF licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.apache.felix</groupId>
    <artifactId>felix-parent</artifactId>
    <version>8-SNAPSHOT</version>
    <relativePath>../../pom/pom.xml</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>org.apache.felix.ipojo.manipulator-project</artifactId>
  <groupId>com.postex.org.apache.felix</groupId>
  <version>1.12.2-SNAPSHOT</version>
  <name>Apache Felix iPOJO Manipulator Project</name>
  <packaging>pom</packaging>

  <description>
    The iPOJO Manipulator project contains the iPOJO packaging process and
    several front-ends for Ant, Maven and BND.
  </description>

  <properties>
    <java.version>17</java.version>
    <asm.version>9.4</asm.version>
  </properties>

  <modules>
    <module>manipulator-bom</module>
    <module>annotations</module>
    <module>manipulator</module>
    <module>manipulator-it</module>
    <module>ipojo-ant-task</module>
    <module>maven-ipojo-plugin</module>
    <module>bnd-ipojo-plugin</module>
    <module>online-manipulator</module>
  </modules>

  <scm>
    <connection>scm:git:https://github.com/apache/felix-dev.git</connection>
    <developerConnection>scm:git:https://github.com/apache/felix-dev.git</developerConnection>
    <url>https://gitbox.apache.org/repos/asf?p=felix-dev.git</url>
  </scm>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <tagBase>https://svn.apache.org/repos/asf/felix/releases</tagBase>
          <useReleaseProfile>false</useReleaseProfile>
          <goals>deploy</goals>
          <arguments>-Papache-release</arguments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.rat</groupId>
          <artifactId>apache-rat-plugin</artifactId>
          <executions>
            <execution>
              <phase>verify</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <!-- check src only (except remote resources additions) -->
            <includes>
              <include>src/**</include>
            </includes>
            <excludes>
              <exclude>src/main/appended-resources/**</exclude>
              <exclude>**/*.MF</exclude>
            </excludes>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>


</project>
